--- a/pair.html
+++ b/pair.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>⚡ Vempire-Girl⚡</title>
+  <title>⚡ SHAHID KING-MD⚡</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <style>
     body {
@@ -91,7 +91,7 @@
 <body>
   <canvas id="matrix"></canvas>
 
-  <h1>⚡ Vempire-Hacker Pair ⚡</h1>
+  <h1>⚡ shahid-md Pair ⚡</h1>
 
   <input type="text" id="number" placeholder="Enter WhatsApp Number (923xxxxxxxxx)">
   <button onclick="getCode()">[ GENERATE CODE ]</button>
